<resources>
    <string name="app_name">BookDatabase</string>
    <string name="edit_data">Edit Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="Save">Save</string>
    <string name="product_name">Product Name</string>
    <string name="BookPrice">Book Price</string>
    <string name="supplier_category">Supplier Category</string>
    <string name="action_delete">delete</string>
    <string name="overview">Overview</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_number">Supplier Number</string>
    <string name="book_img">Book Img</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="empty_title_text">So sad no books.</string>
    <string name="empty_subtitle_text">Get started by adding a Book</string>
    <string name="New_book_title_for_edit">Add a Book</string>
    <string name="editor_activiry_existing_book_title">Edit an existing book</string>
    <string name="Error_save_and_update_message">Error with saving Book</string>
    <string name="Error_saving_Book_message">Book saved!</string>
    <string name="aler_dialog_question">Discard your changes and quit editing?</string>
    <string name="discard_alert_message">Discard.</string>
    <string name="keep_editing_message">Keep Editing</string>
    <string name="delete_dialog_message">Delete this book?</string>
    <string name="delete_button_message">delete</string>
    <string name="cancel_button_message">Cancel</string>
    <string name="editor_delete_book_failed">Error deleting the book</string>
    <string name="editor_delete_book_successful">Book deletion succeeded</string>
    <string name="sell_button_text">Sell</string>
    <string name="product_name_header">Product Name</string>
    <string name="product_name_tool_text">Product name</string>
    <string name="price_tool_tip">$00.00</string>
    <string name="quantity_tool_text">00</string>
    <string name="title_activity_details">Details</string>
    <string name="detail_activity_title">Detail Activity</string>
    <string name="editor_list_title">Editor List Activity</string>
    <string name="edit_screen_header_text">Please tap on the entry you wish to edit.</string>
    <string name="sad_book_content_descr">Sad book because he\'s alone</string>
    <string name="product_name_text_view">Product Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="new_entry">New</string>
    <string name="contact_the_supplier">Contact the Supplier</string>
</resources>
